--- a/css/default.css
+++ b/css/default.css
@@ -1,1 +1,83 @@
+@charset "utf-8"
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  background-color: gray;
+}
+
+header{
+  padding: 10px;
+  text-align: center;
+  background-color: red;
+}
+section{
+  padding: 10px;
+  background-color: orange;
+}
+aside{
+  padding: 10px;
+  background-color: green;
+}
+footer{
+  padding: 10px;
+  background-color: blue;
+  text-align: center;
+}
+
+@media screen and (min-width:641px)
+{
+  aside{
+  width: calc(50% - 20px);
+  float: left;
+}
+#side:after{
+  content:"";
+  display:block;
+  clear:both;
+}
+}
+
+@media screen and (min-width:1025px)
+{
+  #main{
+  max-width: 1024px;
+  margin: auto;
+  }
+  section{
+  width: calc(70% - 20px);
+  float:left;
+  }
+  #side{
+    width: calc(1024px - 718px);
+    float:left;
+  }
+  aside{
+    width: calc(100% - 20px);
+  }
+  #main:after{
+    content:"";
+    display:block;
+    clear:both;
+  }
+
+}
+
+@media screen and (orientation:portrait)
+{
+  body:after{
+    font-family: 'Noto Sans Javanese', sans-serif;;
+  content: "縦長";
+}
+}
+@media screen and (orientation:landscape)
+{
+  body:after{
+    ffont-family: 'Noto Sans Javanese', sans-serif;
+  content: "横長";
+}
+}
